--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.38.0
-numpy==1.25.0
-pandas==2.2.3
-seaborn==0.12.2
-matplotlib==3.7.1
-mlxtend==0.22.0
-wordcloud==1.8.2
-plotly==5.15.0
-scikit-learn==1.2.2
+streamlit
+numpy
+pandas
+seaborn
+matplotlib
+mlxtend
+wordcloud
+plotly
+scikit-learn
